--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,5 +2,5 @@
 <br>
 <br>
 <br>
-Input your text here:<input [value]="paraContent" (input)="updateParaText($event)">
+Input your text here:<input [(ngModel)]="paraContent">
 <p>{{paraContent}}</p>
