--- a/src/app/ngclasstrial/ngclasstrial.component.html
+++ b/src/app/ngclasstrial/ngclasstrial.component.html
@@ -1,5 +1,5 @@
-<p [ngStyle]="{color:changePara, fontWeight:changePara == 'green'?'bold': 'normal'}">ngclasstrial works!. This ia a paragraph</p>
+<p [ngClass]="{'greenBold':changePara, 'redNormal':!changePara}">ngclasstrial works!. This ia a paragraph</p>
 <br>
-<button value="green" (click)="onButtonClick($event)">Turn to Green</button>
-<button value="red" (click)="onButtonClick($event)">Turn to Default</button>
+<button value="true" (click)="onButtonClick($event)">Turn to Green</button>
+<button value="false" (click)="onButtonClick($event)">Turn to Default</button>
 
