Using @Input decorator create a parent component Product list which containd an array of products and displays the list using ngFor on selecting the product the product details will be passed to the child component using @Input decorator and displays it in the child component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <h2>Welcome to Angular</h2>
 <app-header></app-header>
 
-<app-greeting></app-greeting>
-<app-ngclasstrial></app-ngclasstrial>
+<!-- <app-greeting></app-greeting>
+<app-ngclasstrial></app-ngclasstrial> -->
+<br>
+<br>
+<br>
+<app-product-list></app-product-list>
