Place add to cart in product component display a message in product list that product was selected

--- a/src/app/product-list/product-details/product-details.component.html
+++ b/src/app/product-list/product-details/product-details.component.html
@@ -4,3 +4,4 @@
 <div>Name : {{product.price}}</div>
 <div>Name : {{product.description}}</div>
 <div>Name : {{product.rating}}</div>
+<div><button (click)="addToCart()">Add to cart</button></div>
