onchange not calling as expected

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <p>The details are</p>
 <h3>User Profile</h3>
-<p>Name : </p>
-<p>Age: </p>
-<p>Email: </p>
+<p>Name : {{userDetails.name}}</p>
+<p>Age: {{userDetails.age}}</p>
+<p>Email: {{userDetails.email}}</p>
 
 
