create a directive that will change the background color of any html element(paragraph/div/span) on mouse entering and also on mouse leaving

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,3 +17,6 @@
     <button value=1 (click)="setUserId($event)">User1</button>
     <button value=2 (click)="setUserId($event)">User2</button>
 </div>
+<br>
+<br>
+<p appHighlighter>This is the div to illustrate the renderer</p>
