create a directive that will change the background color of any html element(paragraph/div/span) on mouse entering and also on mouse leaving Create a component with a paragraph and button.Initially when loaded paragraph will be in gray in color.on button click it will change to yellow create a service to change the value toggleEnable to determine whether paragraph color should be highlighted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,4 @@
 </div>
 <br>
 <br>
-<p appHighlighter>This is the div to illustrate the renderer</p>
+<app-directive-service></app-directive-service>
