--- a/src/app/directive-service/directive-service.component.html
+++ b/src/app/directive-service/directive-service.component.html
@@ -1,3 +1,3 @@
-<p [appHighlight]="toggleService.setToggleStatus">The hightlightened Paragraph to illaustarte the directive and service</p>
-<button (click)="setToggleStatus()">Click Me</button>
+<p [appHighlight]="toggleService.toggleStatus">The hightlightened Paragraph to illaustarte the directive and service</p>
+<button (click)="setToggleStatus()">{{toggleService.toggleStatus ? 'Click to set Default' : 'Click to hightlight'}}</button>
 
