Create a component with input field ,button labeled Add Item,list displaying added items create service to add item and display it as list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <h2>Welcome to Angular</h2>
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 
 <!-- <app-greeting></app-greeting>
 <app-ngclasstrial></app-ngclasstrial> -->
 <!-- <br>
 <br>
 <br>
-<app-product-list></app-product-list> -->
+<app-product-list></app-product-list> 
 <br>
 <br>
 <app-tem-reference></app-tem-reference>
@@ -18,5 +18,5 @@
     <button value=2 (click)="setUserId($event)">User2</button>
 </div>
 <br>
-<br>
+<br>-->
 <app-directive-service></app-directive-service>
