define a sender component that wil send messages using a MessagingService which will make use of subjects. Define a receiver component that will display the latest mesage whenever a new message is sent.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,5 +18,7 @@
     <button value=2 (click)="setUserId($event)">User2</button>
 </div>
 <br>
-<br>-->
-<app-directive-service></app-directive-service>
+<br>
+<app-directive-service></app-directive-service>-->
+<app-sender></app-sender>
+  <app-receiver></app-receiver>
