create one home and about component then place links for that on clicking the link corresponding component should be loaded

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,5 +20,11 @@
 <br>
 <br>
 <app-directive-service></app-directive-service>-->
-<app-sender></app-sender>
-  <app-receiver></app-receiver>
+<!-- <app-sender></app-sender> -->
+
+  <!--<app-receiver></app-receiver>-->
+  <ul>
+    <li><a routerLink="/">Home</a></li>
+    <li><a routerLink="/about">About</a></li>
+  </ul>
+  <router-outlet></router-outlet>
