protect a component using auth guard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h2>Welcome to Angular</h2>
+<!-- <h2>Welcome to Angular</h2> -->
 <!-- <app-header></app-header> -->
 
 <!-- <app-greeting></app-greeting>
