http request issue

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,6 @@
 <h2>Welcome to the Home Page!</h2>
 <button (click)="logout()">Log Out</button>
+
+<ul>
+    <li *ngFor="let val of data">{{val}}</li>
+</ul>
