Http issue fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,5 +28,5 @@
     <li><a routerLink="/about">About</a></li>
   </ul>-->
   <router-outlet></router-outlet>
-  <app-home></app-home>
+  <!-- <app-home></app-home> -->
   
