submitting form using post

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,3 +6,19 @@
 <p>{{data.title}}</p>
 <p>{{data.body}}</p>
 
+
+<p>My Form</p>
+<form  [formGroup]="submittedForm" (ngSubmit)="onSubmit()">
+    <div>
+      <label for="name">Name:</label>
+      <input id="name" formControlName="name">
+    </div>
+  
+    <div>
+      <label for="email">Email:</label>
+      <input id="email" type="email" formControlName="email">
+    </div>
+  
+    <button type="submit">Submit</button>
+</form>
+
