--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,17 +8,27 @@
 
 
 <p>My Form</p>
-<form  [formGroup]="submittedForm" (ngSubmit)="onSubmit()">
-    <div>
-      <label for="name">Name:</label>
-      <input id="name" formControlName="name">
-    </div>
-  
-    <div>
-      <label for="email">Email:</label>
-      <input id="email" type="email" formControlName="email">
-    </div>
-  
-    <button type="submit">Submit</button>
-</form>
+<mat-card class="form-card">
+  <h2>Angular Material Form</h2>
+  <form [formGroup]="submittedForm" (ngSubmit)="onSubmit()">
+    
+    <mat-form-field class="full-width">
+      <mat-label>Name</mat-label>
+      <input matInput formControlName="name">
+    </mat-form-field>
 
+    <mat-form-field class="full-width">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" formControlName="email">
+    </mat-form-field>
+    <mat-form-field class="full-width">
+      <mat-label>Select a Date</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="selectedDate">
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+
+    <button mat-raised-button color="primary" type="submit">Submit</button>
+  </form>
+</mat-card>
